--- a/index.html
+++ b/index.html
@@ -21,7 +21,40 @@
     <body>
         <!--=============== HEADER ===============-->
         <header class="header" id="header">
-            
+            <nav class="nav container">
+                <a href="#" class="nav__log">Moustapha</a>
+
+                <div class="nav__menu">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#home" class="nav__link">
+                                <i class='bx bx-home-alt'></i>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#about" class="nav__link">
+                                <i class='bx bx-user'></i>                           
+                             </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#skills" class="nav__link">
+                                <i class='bx bxs-book-bookmark' ></i>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#work" class="nav__link">
+                                <i class='bx bxs-briefcase'></i>                          
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#contact" class="nav__link">
+                                <i class='bx bx-message-square-dots'></i>
+                            </a>
+                        </li>
+                    </ul>
+        
+                </div>
+            </nav>
         </header>
 
         <!--=============== MAIN ===============-->
