--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                     </ul>
         
                 </div>
+                <!--Theme change button -->
+                <i class='bx bx-moon change-theme' id="theme-button"></i>
             </nav>
         </header>
 
