--- a/index.html
+++ b/index.html
@@ -60,10 +60,24 @@
         </header>
 
         <!--=============== MAIN ===============-->
-        <main class="main">
-            <!--=============== HOME ===============-->
+        <main class="main"> 
+           <!--=============== HOME ===============-->
             <section class="home section" id="home">
-                
+                <div class="home_container container grid">
+                    <div class="home__data">
+                        <span class="home__greeting">Hello , I'm</span>
+                        <h1 class="home__name"> Moustapha yaya sow</h1>
+                        <h3 class="home__education">Backend Developer</h3>
+                        <div class="home__buttons">
+                            <a download="" href="assets/pdf/Moustapha_yaya_sow_cv.pdf" class="button button--ghost">
+                                Download cv
+                            </a>
+                            <a href ="#about" class="#button">About me</a>
+                        </div>
+
+                    </div>
+
+                </div>
             </section>
             
             <!--=============== ABOUT ===============-->
